load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
load("@rules_shell//shell:sh_test.bzl", "sh_test")
load("//webpack:defs.bzl", "webpack_devserver")
load(":transitions.bzl", "with_compilation_mode")

webpack_devserver(
    name = "devserver",
    configure_devtool = True,
    configure_mode = True,
    node_modules = "//:node_modules",
)

with_compilation_mode(
    name = "devserver_fastbuild",
    compilation_mode = "fastbuild",
    target = ":devserver",
)

with_compilation_mode(
    name = "devserver_dbg",
    compilation_mode = "dbg",
    target = ":devserver",
)

with_compilation_mode(
    name = "devserver_opt",
    compilation_mode = "opt",
    target = ":devserver",
)

sh_test(
    name = "test_fastbuild",
    srcs = ["configure_mode_test.sh"],
    args = [
        "$(rootpath :devserver_fastbuild)",
        "eval",
    ],
    data = [":devserver_fastbuild"],
)

sh_test(
    name = "test_dbg",
    srcs = ["configure_mode_test.sh"],
    args = [
        "$(rootpath :devserver_dbg)",
        "eval-source-map",
    ],
    data = [":devserver_dbg"],
)

sh_test(
    name = "test_opt",
    srcs = ["configure_mode_test.sh"],
    args = [
        "$(rootpath :devserver_opt)",
        "unset",
    ],
    data = [":devserver_opt"],
)

bzl_library(
    name = "transitions",
    srcs = ["transitions.bzl"],
    visibility = ["//visibility:public"],
)
