load("//webpack:defs.bzl", "webpack_devserver")

webpack_devserver(
    name = "devserver",
    chdir = package_name(),
    entry_points = {
        "app.js": "multi",
    },
    data = [
        "helper.js",
        "index.html",
        "//webpack/tests:node_modules/html-webpack-plugin",
        "//webpack/tests:node_modules/js-yaml",
    ],
    webpack_config = ":webpack.config.js",
)
