load("@aspect_bazel_lib//lib:write_source_files.bzl", "write_source_files")
load("//webpack:defs.bzl", "webpack_bundle")

webpack_bundle(
    name = "bundle",
    srcs = [
        "module.js",
    ],
    entry_point = "index.js",
    webpack_config = ":webpack.config.js",
)

write_source_files(
    name = "write_bundle",
    files = {
        "expected.js_": ":bundle.js",
    },
)
