load("@aspect_bazel_lib//lib:diff_test.bzl", "diff_test")
load("@aspect_bazel_lib//lib:write_source_files.bzl", "write_source_files")
load("//webpack:defs.bzl", "webpack_bundle")

webpack_bundle(
    name = "bundle",
    srcs = [
        "module.js",
    ],
    entry_point = "index.js",
    node_modules = "//:node_modules",
    webpack_config = ":webpack.config.js",
)

write_source_files(
    name = "write_bundle",
    files = {
        "expected.js_": ":bundle.js",
    },
)

webpack_bundle(
    name = "rspack-bundle",
    srcs = [
        "module.js",
    ],
    bundler = "rspack",
    entry_point = "index.js",
    node_modules = "//:node_modules",
    webpack_config = ":rspack.config.js",
)

write_source_files(
    name = "write_rspack_bundle",
    files = {
        "expected-rspack.js_": ":rspack-bundle.js",
    },
)

diff_test(
    name = "rspack_bundle_matches_expected",
    file1 = "expected-rspack.js_",
    file2 = "rspack-bundle.js",
)
