load("@bazel_lib//lib:diff_test.bzl", "diff_test")
load("@bazel_lib//lib:write_source_files.bzl", "write_source_files")
load("//webpack:defs.bzl", "webpack_bundle")

webpack_bundle(
    name = "bundle",
    srcs = [
        "module.js",
    ],
    entry_point = "index.js",
    env = {
        "MY_ENV": "$(execpath :index.js)",
    },
    node_modules = "//:node_modules",
    webpack_config = ":webpack.config.js",
)

write_source_files(
    name = "write_bundle",
    files = {
        "expected.js_": ":bundle.js",
    },
)

webpack_bundle(
    name = "multi-bundle",
    srcs = [
        "module.js",
    ],
    entry_points = {
        "index.js": "multi",
    },
    env = {
        "MY_ENV": "$(execpath :index.js)",
    },
    node_modules = "//:node_modules",
    webpack_config = ":webpack.config.js",
)

# The entry_point + entry_points bundles should match.
diff_test(
    name = "entries_match",
    file1 = "bundle.js",
    file2 = "multi.js",
)

webpack_bundle(
    name = "bundle_no_execroot_entry_point",
    srcs = [
        "module.js",
    ],
    entry_point = "index.js",
    env = {
        "MY_ENV": "$(execpath :index.js)",
    },
    node_modules = "//:node_modules",
    # Setting use_execroot_entry_point = False requires runfiles to be enabled,
    # so this does not work by default on Windows. Let's tag this "manual" and
    # disable the test below on Windows.
    tags = ["manual"],
    use_execroot_entry_point = False,
    webpack_config = ":webpack.config.js",
)

not_windows = select({
    "@platforms//os:windows": ["@platforms//:incompatible"],
    "//conditions:default": [],
})

diff_test(
    name = "bundle_no_execroot_entry_point_matches",
    file1 = "bundle.js",
    file2 = "bundle_no_execroot_entry_point.js",
    target_compatible_with = not_windows,
)
