load("@aspect_bazel_lib//lib:diff_test.bzl", "diff_test")
load("@aspect_bazel_lib//lib:write_source_files.bzl", "write_source_files")
load("//webpack:defs.bzl", "webpack_bundle")

webpack_bundle(
    name = "bundle",
    srcs = [
        "chunks/1.js",
        "chunks/2.js",
        "chunks/3.js",
        "chunks/4.js",
        "module.js",
        "//webpack/tests:node_modules/js-yaml",
    ],
    entry_points = {
        "index.js": "bundle",
    },
    node_modules = "//:node_modules",
    supports_workers = True,
    webpack_config = ":webpack.config.js",
)

write_source_files(
    name = "write_bundle",
    files = {
        "expected.js_": ":bundle.js",
    },
)

webpack_bundle(
    name = "rspack-bundle",
    srcs = [
        "chunks/1.js",
        "chunks/2.js",
        "chunks/3.js",
        "chunks/4.js",
        "module.js",
        "//webpack/tests:node_modules/js-yaml",
    ],
    bundler = "rspack",
    entry_points = {
        "index.js": "rspack-bundle",
    },
    node_modules = "//:node_modules",
    supports_workers = True,
    webpack_config = ":rspack.config.js",
)

write_source_files(
    name = "write_rspack_bundle",
    files = {
        "expected-rspack.js_": ":rspack-bundle.js",
    },
)

diff_test(
    name = "rspack_bundle_matches_expected",
    file1 = "expected-rspack.js_",
    file2 = "rspack-bundle.js",
)
